# nccu-ai-hw2

./: example-assignment-based-on-teacher.ipynb  example-assignment-based-on-teacher.md  pyproject.toml  北科電子四甲 林晏宇同學 111360128 HW 2 打造自己的DNN(全連結)手寫辨識.md  北科電子四甲 林晏宇同學 111360128 HW 2 打造自己的DNN(全連結)手寫辨識.py  北科電子四甲 林晏宇同學 111360128 HW 2 打造自己的DNN(全連結)手寫辨識_from_md.ipynb
archive/: example-convert-from-md-back-to-notebook.ipynb  example-md-convert-from-notebook.md  北科電子四甲 林晏宇同學 111360128 HW 2 打造自己的DNN(全連結)手寫辨識_backup_20250929_215245.md  北科電子四甲 林晏宇同學 111360128 HW 2 打造自己的DNN(全連結)手寫辨識_from_md.ipynb
